--- a/business/borrow_detail.html
+++ b/business/borrow_detail.html
@@ -537,7 +537,7 @@
                         <li><span class="list-item header">投标人数</span><span class="list-item">21</span></li>
                         <li><span class="list-item header">是否流标</span><span class="list-item">是</span></li>
                         <li><span class="list-item header">流标操作人</span><span class="list-item">张立科</span></li>
-                        <li><span class="list-item header">流标备注</span><span class="list-item">客户解约</span></li>
+                        <li><span class="list-item header">流标备注</span><span class="list-item cut-line">流标备注流标备注流标备注备注</span></li>
                     </ul>
                     <ul class="list-vertical">
                         <li><span class="list-item header">已投标金额</span><span class="list-item">34567</span></li>
