--- a/message/feedback.html
+++ b/message/feedback.html
@@ -263,7 +263,7 @@
                         <th>来源</th>
                         <th>用户类型</th>
                         <th>用户账号</th>
-                        <th>反馈内容</th>
+                        <th width="30%">反馈内容</th>
                         <th>反馈时间</th>
                         <th>状态</th>
                         <th>操作</th>
@@ -302,7 +302,7 @@
                             <td>APP</td>
                             <td>登录用户</td>
                             <td><a href="#" class="link">张三丰</a></td>
-                            <td>登录不了</td>
+                            <td>AngularJS ng-model 指令用于绑定输入元素到模型中。模型对象有两个属性： user 和 email。我们使用了 ng-show指令， color:red 在邮件是 $dirty 或 $invalid 才显示。AngularJS ng-model 指令用于绑定输入元素到模型中。模型对象有两个属性： user 和 email。我们使用了 ng-show指令， color:red 在邮件是 $dirty 或 $invalid 才显示。AngularJS ng-model 指令用于绑定输入元素到模型中。模型对象有两个属性： user 和 email。我们使用了 ng-show指令， color:red 在邮件是 $dirty 或 $invalid 才显示。AngularJS ng-model 指令用于绑定输入元素到模型中。模型对象有两个属性： user 和 email。我们使用了 ng-show指令， color:red 在邮件是 $dirty 或 $invalid 才显示。</td>
                             <td>2017-08-23 13:37:06</td>
                             <td>待处理</td>
                             <td>
