--- a/admin/userlist.html
+++ b/admin/userlist.html
@@ -349,13 +349,13 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h4 class="modal-title" id="myLargeModalLabel">新增管理员</h4>
             </div>
-            <form id="signupForm"  class="form-horizontal" method="post"  >
+            <form id="signupForm"  class="form-horizontal"  >
             <div class="modal-body">
                     <div class="form-group">
                         <label class="col-sm-3 control-label col-lg-3">登录名：</label>
                         <div class="col-lg-7">
                             <div class="input-group" style="width: 350px">
-                                <input type="text" class="form-control required" placeholder="请输入登录名" name="loginname" id="loginname" >
+                                <input type="text" class="form-control required noblank" placeholder="请输入登录名" name="loginname" id="loginname" >
                             </div>
                         </div>
                     </div>
@@ -363,7 +363,7 @@
                         <label class="col-sm-3 control-label col-lg-3">姓名：</label>
                         <div class="col-lg-7">
                             <div class="input-group" style="width: 350px">
-                                <input type="text" class="form-control required" placeholder="请输入姓名" name="username">
+                                <input type="text" class="form-control required noblank" placeholder="请输入姓名" name="username">
                             </div>
                         </div>
                     </div>
